# python-zabbix-modules

./: .gitignore  CMakeLists.txt  ci  ci-entry  ci-requirements.txt  make  setup.cfg
etc/logrotate.d/: python-zabbix-modules  zabbix-python-modules
etc/python-zabbix-modules/: manager.conf  zabbix_agent.conf  zabbix_agentd.conf  zabbix_server.conf
etc/python-zabbix-modules/available.d/: linux.conf  test.conf
etc/python_zabbix_modules/: manager.conf  zabbix_agent.conf  zabbix_agentd.conf  zabbix_server.conf
etc/python_zabbix_modules/available.d/: linux.conf  test.conf
etc/systemd/system/: python-zabbix-modules-manager.service
src/: CMakeLists.txt  python_zabbix_modules.c
templates/: zabbix_module_linux.xml  zabbix_module_test.xml
zabbix_module/: base.py  simple.py  types.py
zabbix_module_linux/: __init__.py
zabbix_module_test/: __init__.py
zabbix_modules/: configuration.py  finder.py  loader.py  logging.py  manager.py  modules.py  rpc.py  wrapper.py
