[metadata]
name = python_zabbix_modules
summary = Python loadable modules for Zabbix
author = Ivan Mironov
author-email = mironov.ivan@gmail.com
home-page = http://ivan-mironov.net/

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    zabbix_modules
    zabbix_module
    zabbix_module_test

[entry_points]
zabbix_modules =
    test = zabbix_module_test:Test
