[metadata]
name = python_zabbix_modules
summary = Python loadable modules for Zabbix
author = Ivan Mironov
author-email = mironov.ivan@gmail.com
home-page = http://ivan-mironov.net/

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    zabbix_modules
    zabbix_module
    zabbix_module_test
    zabbix_module_linux

[entry_points]
console_scripts =
    python_zabbix_modules_manager = zabbix_modules.manager:main

zabbix_modules =
    test = zabbix_module_test:Test
    linux = zabbix_module_linux:Main
